# ChangeLog for dev-java/systray4j
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/systray4j/ChangeLog,v 1.9 2004/12/18 08:48:23 corsair Exp $

  18 Dec 2004; Markus Rothe <corsair@gentoo.org> systray4j-2.4.ebuild:
  added ~ppc64 to KEYWORDS

  19 Aug 2004; Travis Tilley <lv@gentoo.org> systray4j-2.4.ebuild:
  stable on amd64

  27 Jun 2004; Chris Aniszczyk <zx@gentoo.org> systray4j-2.4.ebuild:
  Marking stable on x86 / hppa

  19 Jun 2004; David Holm <dholm@gentoo.org> systray4j-2.4.ebuild:
  Added to ~ppc.

  13 May 2004; Daniel Ahlberg <aliz@gentoo.org> systray4j-2.4.ebuild:
  Added amd64 keyword.

  05 May 2004; Jeremy Huddleston <eradicator@gentoo.org> systray4j-2.4.ebuild:
  Added to ~sparc.

*systray4j-2.4 (11 Mar 2004)

  11 Mar 2004; Chris Aniszczyk <zx@gentoo.org> :
  Initial Import. Thanks to Jeremy Huddleston <eradicator@gentoo.org> for the
  initial ebuild. Closes #44331
